--- a/templates/extra_ep/item_consumption_total_template.html
+++ b/templates/extra_ep/item_consumption_total_template.html
@@ -3,5 +3,6 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb report.raid_name '' %}
+    {% breadcrumb report.raid_name 'extra_ep:combat_list' report.id %}
+    {% breadcrumb 'Все бои' '' %}
 {% endblock %}
