--- a/templates/extra_ep/report/combat_list_template.html
+++ b/templates/extra_ep/report/combat_list_template.html
@@ -1,4 +1,4 @@
-{% extends "tableview_template.html" %}
+{% extends "extra_ep/report/base_report.html" %}
 {% load django_bootstrap_breadcrumbs %}
 
 {% block breadcrumbs %}
