--- a/templates/extra_ep/report/report_create_template.html
+++ b/templates/extra_ep/report/report_create_template.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "extra_ep/report/base_report.html" %}
 {% load django_tables2 %}
 {% load static %}
 {% load django_bootstrap_breadcrumbs %}
