--- a/static/extra_ep/style.css
+++ b/static/extra_ep/style.css
@@ -1,9 +1,46 @@
 .nav-container {
-  position:relative;
+    position:relative;
 }
 .nav-right-block {
-  position:absolute;
-  right:1rem;
-  top:50%;
-  transform:translateY(-50%);
+    position:absolute;
+    right:1rem;
+    top:50%;
+    transform:translateY(-50%);
+}
+
+nav.navbar {
+    margin-bottom: 80px;
+    border: 0;
+    background-color: #272B30;
+}
+
+html {
+    background: url(/static/extra_ep/background.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+body {
+    background-color: transparent;
+}
+
+#page-wrap {
+    margin-right: 100px;
+    margin-left: 100px;
+    margin-bottom: 120px;
+    padding: 20px;
+    border-radius: 25px;
+    background: rgba(39, 43, 48, .85);
+}
+
+#calendar-month tr td.calendarium-current,
+#calendar-week tr td.calendarium-current {
+    background: #3e4449;
+}
+
+#calendar-month tr td,
+#calendar-week tr td {
+    background: #272B30;
 }
