--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
             {% block title %}Адепты Катаклизма{% endblock %}
         </title>
     {% endblock %}
+    {% block css %}{% endblock %}
 </head>
 <body>
 {% block body %}
@@ -27,5 +28,6 @@
             {% block main %}{% endblock %}  {# For calendarium #}
     </div>
 {% endblock %}
+{% block js %}{% endblock %}
 </body>
 </html>
