--- a/templates/calendarium/calendar_day.html
+++ b/templates/calendarium/calendar_day.html
@@ -5,9 +5,9 @@
 <h1>{% trans "Occurrences" %}</h1>
 <form action="." method="post">
     {% csrf_token %}
-    <input class="btn btn-default" type="submit" name="previous" value="{% trans "Previous" %}" />
-    <input class="btn btn-default" type="submit" name="next" value="{% trans "Next" %}" />
-    <input class="btn btn-default" type="submit" name="today" value="{% trans "Today" %}" />
+    <input class="btn btn-primary" type="submit" name="previous" value="{% trans "Previous" %}" />
+    <input class="btn btn-primary" type="submit" name="next" value="{% trans "Next" %}" />
+    <input class="btn btn-primary" type="submit" name="today" value="{% trans "Today" %}" />
 </form>
 <table class="table">
     <tr>
