--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,13 @@
 <body>
 {% block body %}
     {% include "navbar.html" %}
+    {% if messages %}
+        <ul class="messages">
+            {% for message in messages %}
+                <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+            {% endfor %}
+        </ul>
+    {% endif %}
     <div id="page-wrap">
             {% block content %}{% endblock %}
             {% block main %}{% endblock %}  {# For calendarium #}
