--- a/static/extra_ep/style.css
+++ b/static/extra_ep/style.css
@@ -35,38 +35,33 @@ body {
     background: rgba(39, 43, 48, .85);
 }
 
-.class-druid {
-    background-color: #FF7D0A;
+.consumable_group {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black; /* If you want dots under the hoverable text */
 }
-.class-hunter {
-    background-color: #A9D271;
+
+/* Tooltip text */
+.consumable_group .tooltiptext {
+  visibility: hidden;
+  width: 320px;
+  background-color: black;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  border-radius: 6px;
+
+  /* Position the tooltip text */
+  position: absolute;
+  z-index: 1;
+  top: 100%;
+  left: 50%;
+  margin-left: -60px;
 }
-.class-mage {
-    background-color: #40C7EB;
-}
-.class-monk {
-    background-color: #00FF96;
-}
-.class-paladin {
-    background-color: #F58CBA;
-}
-.class-priest {
-    background-color: #FFFFFF;
-}
-.class-rogue {
-    background-color: #FFF569;
-}
-.class-shaman {
-    background-color: #0070DE;
-}
-.class-warlock {
-    background-color: #8787ED;
-}
-.class-warrior {
-    background-color: #C79C6E;
-}
-.class-unknown {
-    background-color: gray;
+
+/* Show the tooltip text when you mouse over the tooltip container */
+.consumable_group:hover .tooltiptext {
+  visibility: visible;
 }
 
 .false {
