--- a/templates/extra_ep/report/item_consumption_total_template.html
+++ b/templates/extra_ep/report/item_consumption_total_template.html
@@ -9,6 +9,6 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb report.raid_name 'extra_ep:combat_list' report.id %}
+    {% breadcrumb report.raid_name 'extra_ep:report_new' report.id %}
     {% breadcrumb 'Все бои' '' %}
 {% endblock %}
