--- a/templates/extra_ep/report/report_export_template.html
+++ b/templates/extra_ep/report/report_export_template.html
@@ -5,7 +5,7 @@
 
 {% block breadcrumbs %}
     {{ block.super }}
-    {% breadcrumb object.raid_name 'extra_ep:combat_list' object.id %}
+    {% breadcrumb object.raid_name 'extra_ep:report_new' object.id %}
     {% breadcrumb 'Экспорт' '' %}
 {% endblock %}
 
