--- a/templates/extra_ep/consumable_info/consumable_set_detail_template.html
+++ b/templates/extra_ep/consumable_info/consumable_set_detail_template.html
@@ -29,9 +29,9 @@
         <div class="row">
             <div class="col-3">
                 {% if consumable.item_id %}
-                    <a href="#" data-wowhead="item={{ consumable.item_id }}&domain=ru.classic" >Item</a>
+                    <a href="#" data-wowhead="item={{ consumable.item_id }}&domain=ru.tbc" >Item</a>
                 {% else %}
-                    <a href="#" data-wowhead="spell={{ consumable.spell_id }}&domain=ru.classic" >Spell</a>
+                    <a href="#" data-wowhead="spell={{ consumable.spell_id }}&domain=ru.tbc" >Spell</a>
                 {% endif %}
             </div>
             <div class="col-3">
