--- a/templates/extra_ep/consumable_info/consumable_set_detail_template.html
+++ b/templates/extra_ep/consumable_info/consumable_set_detail_template.html
@@ -68,9 +68,9 @@
                 {% for consumable in group.consumables.all %}
                     <div>
                         {% if consumable.item_id %}
-                            <a href="#" data-wowhead="item={{ consumable.item_id }}&domain=ru.classic" >Item</a>
+                            <a href="#" data-wowhead="item={{ consumable.item_id }}&domain=ru.tbc" >Item</a>
                         {% else %}
-                            <a href="#" data-wowhead="spell={{ consumable.spell_id }}&domain=ru.classic" >Spell</a>
+                            <a href="#" data-wowhead="spell={{ consumable.spell_id }}&domain=ru.tbc" >Spell</a>
                         {% endif %}
                     </div>
                 {% endfor %}
